# mailmerge

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  bashrc  mailmerge.py  pyproject.toml  requirements.txt  setup.py  test  tox.ini
.claude/: settings.local.json
.github/workflows/: continuous_integration.yml  main.yml
mailmerge/: __init__.py  __main__.py  api.py  exceptions.py  log.py  mailmerge.py  main.py  message_template.py  sendmail_client.py  smtp_dummy.py  template_message.py  test_mailmerge.py  test_mailmerge_local.py  utils.py
tests/: __init__.py  cd.py  conftest.py  test_cc_bcc.py  test_cc_bcc.template.txt  test_database.py  test_helpers.py  test_live_server.py  test_mailmerge.py  test_main.py  test_main_log_and_continue.py  test_main_output.py  test_main_rate.py  test_markdown.py  test_markdown.template.txt  test_message_template.py  test_ratelimit.py  test_send_attachment.py  test_send_attachment.template.txt  test_send_attachment_1.txt  test_send_attachment_list.txt  test_sendmail_client.py  test_simple.database.csv  test_simple.py  test_simple.server.conf  test_smtp_base.py  test_template_message.py  test_template_message_encodings.py  test_utf8.database.csv  test_utf8.py  test_utf8.server.conf  test_utf8.template.txt  test_utf8_database.database.csv  test_utf8_database.py  test_utils.py  utils.py
tests/testdata/: attachment_17.txt  attachment_template.txt  attachment_template_empty.txt  bad_template.txt  emoji_database_template.txt  emoji_markdown_template.txt  emoji_template.txt  mailmerge_database_with_BOM.csv  markdown_template_utf8.txt  server_open.conf  server_ssl.conf  simple_server.conf  simple_template.txt  utf8_database.csv  utf8_template.txt
